# oscal-skills-guardrails

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  skills.lock.json
.github/workflows/: skill-gate.yml
data/oscal-policies/: skill-guardrails-catalog.json  skills-policy-profile.json
docs/: oscal-skills-profile-schema.md
examples/: policy.yaml
examples/skills/langgraph-docs/: SKILL.md
examples/skills/meeting-notes/: SKILL.md
examples/skills/oscal-authoring/: SKILL.md
scripts/: scan_skill.mjs
src/deepagent_skill_guardrails/: __init__.py  cli.py  deepagents_factory.py  mcp_server.py  middleware.py  models.py  oscal_loader.py  oscal_results.py  policy.py  registry.py  rubric_judge.py  scanner.py
tests/: test_cli.py  test_digest_verification.py  test_omlx_judge.py  test_oscal_loader.py  test_oscal_results.py  test_policy.py  test_registry.py  test_rubric_judge.py
