[project]
name = "deepagent-skill-guardrails"
version = "0.1.0"
description = "Policy, scanner, and DeepAgents integration scaffold for governing Agent Skills."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
]

[project.scripts]
skill-guardrails = "deepagent_skill_guardrails.cli:main"

[project.optional-dependencies]
deepagents = [
  "deepagents>=0.6.8",
  "langchain-mcp-adapters>=0.1.0",
]
mcp = [
  "mcp>=1.27,<2",
]
judge = [
  "langchain>=1.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
